# scattered

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  deno.json  index.html  package.json  playground.html  pnpm-lock.yaml  pyproject.toml  tsconfig.json  upload.html  vite.config.js
.github/workflows/: deploy.yml
data/: .gitignore  penguins.arrow  process-sample-data.ipynb  pyproject.toml  scattered.csv
lib/: assert.ts  camera.ts  demo.ts  lasso.test.ts  lasso.ts  main.test.ts  main.ts  main2.js  renderer.ts  types.ts  utils.ts  widget.js
src/: camera.ts  demo.ts  loaders.ts  main.ts  renderer.ts  utils.ts
src/scattered/: __init__.py
src/shaders/: spheres.wgsl
