[project]
name = "scattered"
version = "0.0.0"
description = "3D scatterplots are useless, but fun"
readme = "README.md"
authors = [
    { name = "David Kouril", email = "david.kouril@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "jupyterlab>=4.5.0",
]

[project.scripts]
widget = "widget:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
