[project]
name = "scattered"
version = "0.0.1"
description = "3D scatterplots are useless, but fun"
readme = "README.md"
authors = [
    { name = "David Kouřil", email = "david.kouril@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.0",
    "marimo>=0.18.4",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.9.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
