[project]
authors = [{name = "David Kouril", email = "david.kouril@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "data"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
data = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.3.5,<5"
umap-learn = ">=0.5.7,<0.6"
seaborn = ">=0.13.2,<0.14"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.10.0,<4"
pyarrow = ">=19.0.0,<20"
plotly = ">=6.0.0,<7"
